# $Id$

2006-05-27	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.14 released.

2006-05-22	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/FileSystemDaoWorker.class.php: arrived from trunk.

2006-05-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Utils/HeaderUtils.class.php,
	main/Utils/RussianTextUtils.class.php, main/Utils/Mail.class.php,
	main/Containers/UnifiedContainer.class.php,
	main/Containers/OneToManyLinked.class.php,
	main/Containers/ManyToManyLinked.class.php,
	core/Form/PlainForm.class.php,
	core/Form/PrimitiveEnumeration.class.php,
	core/Form/PrimitiveList.class.php, core/Base/Enumeration.class.php,
	core/Logic/LogicalBlock.class.php: synced with trunk.

	* branches/0.2/core/Form/ListedPrimitive.class.php: arrived from
	trunk.

2006-05-12	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Utils/RussianTextUtils.class.php,
	main/Base/CalendarMonthWeekly.class.php,
	core/Form/PrimitiveIdentifier.class.php, core/Form/Form.class.php:
	synced with trunk.

	* main/Utils/Mail.class.php: arrived from trunk.


2006-05-02	Sergey S. Sergeev   <webs.support@gmail.com>

	* main/Containers/StorableContainer.class.php: synced with trunk.

2006-05-02	Sergey S. Sergeev	<webs.support@gmail.com>

	* core/Form/Filter.class.php, core/Form/Primitive.class.php,
	core/Base/IdentifiableObject.class.php: synced with trunk.

2006-05-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Stringable.class.php: arrived from trunk, since it's
	referenced by FormUtils.

2006-04-30	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.13 released.

2006-04-29	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/IdentifiablePrimitive.class.php,
	core/Form/PrimitiveEnumeration.class.php,
	core/Form/ExplodedPrimitive.class.php: arrived from trunk.

	* main/Utils/TextUtils.class.php, main/Utils/DebugUtils.class.php,
	core/Form/PrimitiveIdentifier.class.php,
	core/Form/Primitive.class.php: synced with trunk.
